<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_l"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Grid1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- user profile -->
        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#FFDDDDDD"
            android:contentDescription="@string/user_profile"
            android:onClick="showUserProfile"
            android:scaleType="centerInside"
            android:src="@drawable/user_profile" />

		<ImageButton
		    android:id="@+id/buttonNav"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="#00000000"
		    android:contentDescription="@string/nav"
		    android:onClick="showNavigator"
		    android:paddingLeft="10dp"
		    android:scaleType="centerInside"
		    android:src="@drawable/nav" />

        <ImageButton
            android:id="@+id/buttonCamcorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/camera"
            android:onClick="showCamcorder"
            android:scaleType="centerInside"
            android:src="@drawable/camera" />
    
    <ImageButton
        android:id="@+id/buttonDiag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/diag"
        android:onClick="showDiag"
        android:scaleType="centerInside"
        android:src="@drawable/diag" />

    <ImageButton
        android:id="@+id/buttonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/web"
        android:onClick="showWebBrowser"
        android:scaleType="centerInside"
        android:src="@drawable/chrome" />

    <ImageButton
        android:id="@+id/buttonMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/media"
        android:onClick="showMedia"
        android:paddingRight="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/media" />

        <!-- bluetooth -->

		<ImageButton
		    android:id="@+id/buttonBluetooth"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:background="#FFDDDDDD"
		    android:contentDescription="@string/bluetooth"
		    android:onClick="showBluetooth"
		    android:scaleType="centerInside"
		    android:src="@drawable/bluetooth" />

    </LinearLayout>

    <LinearLayout 
        android:id="@+id/LinearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <ImageButton
        android:id="@+id/buttonSkype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:background="#00000000"
        android:contentDescription="@string/skype"
        android:onClick="showSkype"
        android:scaleType="centerInside"
        android:src="@drawable/skype" />
        <!-- logo -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/buttonOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/callback"
            android:onClick="doCallOperator"
            android:scaleType="centerInside"
            android:src="@drawable/callback" />

    </LinearLayout>
    <!-- myAvto -->
    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/buttonMyAvto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:contentDescription="@string/car_profile"
            android:onClick="onMyAvto"
            android:scaleType="centerInside"
            android:src="@drawable/myauto" />

    </LinearLayout>
    <!-- status -->
	<LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textBalance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFFFF"
            android:visibility="visible" />

    </LinearLayout>
    <!-- banner -->
    <LinearLayout
        android:id="@+id/LinearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal">
        <ImageView
        android:id="@+id/imageBanner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="fill_horizontal"
        android:contentDescription="@string/ads"
        android:maxHeight="96dp"
        android:minHeight="48dp" />
    </LinearLayout>
</LinearLayout>
