<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewUserProfile"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UserProfileActivity" 
    android:columnCount="2"
    android:rowCount="10">
    <TextView
        android:id="@+id/labelSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/surname"
        android:layout_row="0"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="0"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/given_name"
        android:layout_row="1"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:id="@+id/labelMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/middle_name"
        android:layout_row="2"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:id="@+id/labelPhone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/phone1"
        android:layout_row="3"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textPhone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="3"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/phone2"
        android:layout_row="4"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="4"
        android:layout_column="1" />
    
        <TextView
        android:id="@+id/labelPhone3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/phone3"
        android:layout_row="5"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textPhone3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="5"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/blood"
        android:layout_row="6"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="6"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelDeseases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/system_deseases"
        android:layout_row="7"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textDeseases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="7"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/allergies"
        android:layout_row="8"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="8"
        android:layout_column="1" />
    
    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="@string/address"
        android:layout_row="9"
        android:layout_column="0" />
    <EditText
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:ems="10"
        android:inputType="text"
        android:layout_row="9"
        android:layout_column="1" />
</GridLayout>
</ScrollView>