<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	tools:context=".CarProfile"  
        android:id="@+id/scrollViewCarProfile"
    	android:layout_width="match_parent"
    	android:layout_height="fill_parent"
    	android:scrollbars="vertical">

        <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		tools:context=".CarProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
    		android:rowCount="3">
			<Spinner android:id="@+id/spinnerCars"
			   	android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|left|right"
		        android:layout_row="0"
		        android:layout_column="0"
		        android:layout_columnSpan="2"
		        android:prompt="@string/spinner_cars"
			    />
            
            <TextView
		        android:id="@+id/labelCarName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|left"
		        android:text="@string/car_name"
		        android:layout_row="1"
		        android:layout_column="0" />
            <EditText
                android:id="@+id/textCarName"
                android:inputType="text"
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
                android:layout_gravity="top|right"
        		android:layout_row="1"
        		android:layout_column="1"/>

            <TextView
		        android:id="@+id/labelCarDevice"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top|left"
		        android:text="@string/device_id"
		        android:layout_row="2"
		        android:layout_column="0" />
            
            <EditText
                android:id="@+id/textCarDevice"
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_gravity="top|right"
        		android:layout_row="2"
        		android:layout_column="1" />

        </GridLayout>
    </ScrollView>
